--- a/index.html
+++ b/index.html
@@ -25,11 +25,16 @@
 			<section>
 				<section>
 					<img src="./images/deckardcain.jpg" height="400px">
-					<h2>Du bi soluklan</h2>
+					<h2>Du bi dinle</h2>
+				</section>
+				<section>
+					<p>ES2015'e kadar, JS'in standartlaşmış bir modül yükleme sistemi yoktu.</p>
+
 				</section>
 				<section>
 					<p>Revealing Module</p>
 					<pre><code class="js">var revealingModule = (function () {
+  // this === window
   var private = "yassah",
     public = "selam";
 
@@ -64,10 +69,74 @@ console.log(b); // {}</code></pre>
 <pre><code class="js">var b = require("./b");
 console.log(b); // 42</code></pre>
 <hr>
-<pre><code class="js">exports.meaning = 42; // module.exports eziyor</code></pre>
+<pre><code class="js">exports.meaning = 42; // module.exports overrides</code></pre>
 <pre><code class="js">var b = require("./b");
 console.log(b); // { meaning: 42 }</code></pre>
-<aside class="notes">pros: circular is OK <br> const: sync because SS dev assumed | single export per file | browser'da native require yok</aside>
+<aside class="notes">sync | developed for server-side | pros: circular is OK <br> const: sync because SS dev assumed | single export per file | browser'da native require yok</aside>
+				</section>
+				<section>
+					<p style="margin:0;padding:0"><b style="font-size:5rem">A</b>synchronous <b style="font-size:5rem">M</b>odule <b style="font-size:5rem">D</b>efinition</p>
+					<p style="font-size:1.5rem;margin:0;padding:0">Asenkron modül yükleme amacıyla yaratılan CommonJS fork'u</p>
+					<pre><code class="js">define("alias", ["b.js", "c.js"], function (b, c) {
+// ya da define(function(require) { var b = require("b.js") })
+// b.js ve c.js'den export edilenler scope'ta
+  return {...};
+});</code></pre>
+<pre><code class="text">-- index.html
+-- src/
+  -- index.js
+  -- require.js</code></pre>
+<pre><code class="html">&lt;script data-main="src/index" src="require.js"&gt;&lt;/script&gt;</code></pre>
+<pre><code class="js">require(["alias"], function(alias) {
+  // Eğer "b.js" ya da "c.js" de require() ile asenkron yükleme yapıyorsa
+  // o bitene kadar bekledikten sonra bu noktaya geliyor
+});</code></pre>
+<aside class="notes">requirejs | SystemJS - async olduğu için design gerektiriyor (race conditions)</aside>
+				</section>
+				<section>
+					<p style="margin:0;padding:0"><b style="font-size:5rem">U</b>niversal <b style="font-size:5rem">M</b>odule <b style="font-size:5rem">D</b>efinition</p>
+					<pre><code class="js">(function (this, cb) {
+  if (typeof define === "function" && define.amd) {
+    define(["jquery"], cb); // AMD
+  } else if (typeof exports === "object") {
+    module.exports = cb(require("jquery")); // CJS
+  } else {
+    this.myModule = cb(this.jQuery); // browser global
+  }
+}(window, function($) {
+  return $(document.body);
+}));</code></pre>
+					<p>Modül yükleme işlemi için belirlenmiş pattern'lar topluluğu</p>
+					<p><a href="https://github.com/umdjs/umd/tree/master/templates">Şurada</a> örnekler bulabilirsiniz.</p>
+				</section>
+				<section>
+					<h3><a href="http://exploringjs.com/es6/ch_modules.html">ES2015 (harmony) modules</a></h3>
+					<p style="font-size:1.5rem">ECMAScript standardında tanımlanan modül yükleme yöntemi</p>
+					<p style="font-size:1.5rem">Modüller dosyalara bölünmüştür. Her dosyada en fazla bir tane modül bulunabilir.</p>
+					<div class="fragment">
+						<pre><code class="js">// exports.js
+export function bar() { return "bar" }
+export default "foo"
+export const baz = "baz"</code></pre>
+						<pre><code class="js">// imports.js
+import def from "./exports" // def === "foo"
+import * as all from "./exports"
+// all -> { default: "foo", bar: function(){...}, baz: "baz" }
+import def, { bar, baz } from "./exports"</code></pre>
+					<p style="font-size:1.5rem">Her modülde en fazla 1 tane default export olabilir. (hiç olmayabilir)</p>
+					</div>
+					<aside class="notes">SystemJS</aside>
+				</section>
+				<section>
+					<img style="margin:0" src="./images/broccoli.png" height="200px">
+					<img style="margin:0" src="./images/browserify.png" height="200px">
+					<img style="margin:0" src="./images/brunch.png" height="200px">
+					<img style="margin:0" src="./images/grunt.png" height="200px">
+					<img style="margin:0" src="./images/gulp.png" height="200px">
+					<img style="margin:0" src="./images/jspm.png" height="200px">
+					<img style="margin:0" src="./images/rollup.svg" height="200px">
+					<img style="margin:0" src="./images/npm.png" height="200px">
+					<img style="margin:0" src="./images/webpack-logo.svg" height="200px">
 				</section>
 			</section>
 			<section>
@@ -98,18 +167,19 @@ module.exports = function(env) {
 				</section>
 				<section>
 					<img src="images/webpack-modular.png">
+					<aside class="notes">dependency graph</aside>
 				</section>
 				<section>
-					<h2>Her şey modül</h2>
-					<pre><code class="js">// index.js
+					<h2>Neler modüldür?</h2>
+					<pre><code class="js">define(["a", "b"], function(){ ... });
 require("./index.css");
 const svg = require("./static/resim.svg");
 const jpeg = require("./static/resim2.jpeg");
 const foo = require("./bar.js)";
 // ya da ES2015 import
 import foo from "./bar.js"</code></pre>
-<pre><code class="js">// index.css
-@import url("https://fonts.googleapis.com/css?family=Roboto");
+<pre><code class="html">&lt;img src=...&gt;</code></pre>
+<pre><code class="js">@import url("https://fonts.googleapis.com/css?family=Roboto");
 @font-face {
   font-family: "Roboto";
   src: url("/fonts/Roboto-Regular.ttf") format("truetype");
@@ -126,7 +196,7 @@ import foo from "./bar.js"</code></pre>
 					<p>Mutabık mıyız?</p>
 					<pre><code class="sh">> node -v # 4 ve üzeri
 > npm -v # 3 ve üzeri
-> git --version # varlığın yeter</code></pre>
+> git --version # varlığı yeter</code></pre>
 				</section>
 				<section>
 					<h2>Kaç saniye sürecek?</h2><br>
@@ -148,7 +218,8 @@ import foo from "./bar.js"</code></pre>
 
 module.exports = function(env) {
   return {
-    entry: ["./src/index.js"],
+    context: path.resolve(__dirname, "src"),
+    entry: ["./index.js"],// context olmasa ./src/index olacaktı
     output: {
       filename: "bundle.js",
       path: path.resolve(__dirname, "build"),
@@ -174,8 +245,8 @@ console.dir(navigator)</code></pre>
 					<pre><code class="sh">> npm i -D css-loader style-loader</code></pre>
 					<p>webpack.config.js</p>
 					<pre><code class="js">{
-  entry: /**************/
-  output: /**************/
+  entry: /**************/,
+  output: /**************/,
   module: {
     rules:[
       {
@@ -184,7 +255,7 @@ console.dir(navigator)</code></pre>
         loaders: ["style-loader", "css-loader"]
       }
     ]
-  }
+  },
 }</code></pre>
 				</section>
 				<section>
@@ -208,8 +279,7 @@ console.dir(navigator);</code></pre>
 				<section>
 					<pre><code class="js">{
   entry: {
-    // string | [string]
-    "chunkName": "./src/index.js",
+    "chunkName": "./src/index.js", // string | [string]
   },
   output: {
     filename: "bundle.js", // sadece dosya adı
@@ -230,7 +300,7 @@ console.dir(navigator);</code></pre>
     filename: "[name].js", // [hash] [chunkhash]
     sourceMapFilename: "[file].map" // [id] [hash]
     path: path.resolve(__dirname, "build"),
-    publicPath: "http://cdn.com/"
+    publicPath: "http://cdn.com/", // [hash]
   }
 }</code></pre>
 				</section>
@@ -238,15 +308,15 @@ console.dir(navigator);</code></pre>
 					<pre><code class="js">module: {
   rules: [
     {
-      test: /\.css$/, // RegExp
+      test: /\.js$/, // RegExp
       include: [path.resolve(__dirname, "src")], // Array
       use: [{
         loader: "babel-loader",
-        options: { cacheDirectory: true, }
+        options: { cacheDirectory: true, },
       }, {}]
     },
     {
-      test: /\.js$/
+      test: /\.vue$/,
           ...
     }
   ]
@@ -260,13 +330,15 @@ console.dir(navigator);</code></pre>
     filename: String,
     path: String
   },
-  rules: [{
-    test: RegExp,
-    use: [{
-      loader: String,
-      options: {}
+	module : {
+    rules: [{
+      test: RegExp,
+      use: [{
+        loader: String,
+        options: {}
+      }, {}, {}],
     }, {}, {}]
-  }, {}, {}]
+  },
 }</code></pre>
 				</section>
 			</section>
@@ -294,19 +366,34 @@ console.dir(navigator);</code></pre>
 			<section>
 				<p>package.json</p>
 				<pre><code class="js">scripts: {
-  "watch": /*****************/
-  "build": /*****************/
-  "dev": webpack --env development
+  "watch": /*****************/,
+  "build": /*****************/,
+  "dev": webpack --env development,
 }</code></pre>
 <p>webpack.config.js</p>
 <pre><code class="js">module.exports = env => {
   const isDev = env === "development";
 
   return {
-    entry: /*****************/
-    output: /*****************/
+    entry: /*****************/,
+    output: /*****************/,
+    devtool: isDev ? "cheap-eval-source-map" : "source-map",
   }
 }</code></pre>
+			</section>
+			<section>
+				<pre><code class="sh">> webpack -p</code></pre>
+				<p>===</p>
+				<pre><code class="sh">> webpack --optimize-minimize --optimize-occurrence-order</code></pre>
+				<p>===</p>
+				<pre><code class="js">{
+  module: /*****************/,
+  plugins: [
+    new webpack.optimize.UglifyJsPlugin(),
+    new webpack.optimize.OccurrenceOrderPlugin()
+  ],
+}</code></pre>
+				<p>CSS minimization da yapıyor</p>
 			</section>
 			<section>
 				<ul>
@@ -318,9 +405,32 @@ console.dir(navigator);</code></pre>
 			</section>
 		</section>
 		<section>
+			<img src="./images/plugins.jpg" width="400">
+			<h2>Plugins</h2>
+		</section>
+		<section>
 			<section>
 				<img src="./images/nar.jpg" width="500">
 				<h2>Chunks</h2>
+			</section>
+			<section>
+        <pre><code class="js">new webpack.optimize.CommonsChunkPlugin(options)</code></pre>
+				<pre><code class="js">{
+  name: String, // ya da names: [String]
+  filename: String, // konulmayabilir
+}</code></pre>
+			</section>
+			<section>
+				multiple HTML plugins
+
+			</section>
+		</section>
+		<section>
+			<section><h2>ve diğerleri...</h2></section>
+			<section>
+				<pre><code class="js">target: "web" | "webworker" | "node" | "async-node" | "node-webkit" | "electron" | "electron-renderer"</code></pre>
+				<pre><code class="js">bail: true | false</code></pre>
+
 			</section>
 		</section>
 		<section>
@@ -339,6 +449,7 @@ console.dir(navigator);</code></pre>
 					<li><a href="https://github.com/webpack-contrib/awesome-webpack">github/awesome-webpack</a></li>
 					<li><a href="https://webpack.js.org/loaders/">docs/loaders</a> - <a href="https://github.com/webpack/docs/wiki/list-of-loaders">wiki/loaders</a></li>
 					<li><a href="https://webpack.js.org/plugins/">docs/plugins</a> - <a href="https://github.com/webpack/docs/wiki/list-of-plugins">wiki/plugins</a></li>
+					<li><a href="https://webpack.land/">webpack land</a></li>
 					<li><a href="https://medium.com/tag/webpack">medium.com/webpack</a></li>
 				</ul>
 			</section>
