--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ import foo from "./bar.js"</code></pre>
 module.exports = function(env) {
   return {
     context: path.resolve(__dirname, "src"),
-    entry: ["./index.js"],// context olmasa ./src/index olacaktı
+    entry: ["./index.js"],
     output: {
       filename: "bundle.js",
       path: path.resolve(__dirname, "build"),
